--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,3 +30,14 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/images/fonts/
+  
+  fonts:
+    - family: Montserrat
+      fonts:
+        - asset: assets/images/fonts/Montserrat-Thin.ttf
+          weight: 100
+        - asset: assets/images/fonts/Montserrat-SemiBold.ttf
+          weight: 600
+        - asset: assets/images/fonts/Montserrat-Bold.ttf
+          weight: 700
